add page-list, search-bar, service components, and styling

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,5 @@
-<app-search-bar></app-search-bar>
-<app-page-list></app-page-list>
+<!-- listen to the submitted event from the child -->
+<div class="container">
+    <app-search-bar (submitted)="onTerm($event)"></app-search-bar>
+    <app-page-list *ngIf="pages.length" [pages]="pages"></app-page-list>
+</div>
