--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,1 +1,10 @@
-<p>search-bar works!</p>
+<!-- update search term -->
+<div class="box">
+    <form (submit)="onFormSubmit($event)">
+        <input 
+            placeholder="Enter Search Term"
+            class="input"
+            (input)="term = $event.target.value"
+        />
+    </form>
+</div>
